--- a/SimpleChat/Resources/layout/activity_chats.xml
+++ b/SimpleChat/Resources/layout/activity_chats.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +19,6 @@
     <MvvmCross.DroidX.RecyclerView.MvxRecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:MvxTemplateSelector="@layout/view_chat"
+            app:MvxItemTemplate="@layout/view_chat"
             app:MvxBind="ItemsSource Chats"/>
 </RelativeLayout>
