--- a/SimpleChat/Resources/layout/view_chat.xml
+++ b/SimpleChat/Resources/layout/view_chat.xml
@@ -3,8 +3,21 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:MvxBind="Text Chat.Name"/>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/md_theme_indent_1x"
+            android:orientation="vertical">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                app:MvxBind="Text Title"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
+                app:MvxBind="Text Subtitle"/>
+    </LinearLayout>
+    
 </com.google.android.material.card.MaterialCardView>
