--- a/SimpleChat.Android/Resources/layout/activity_chat.xml
+++ b/SimpleChat.Android/Resources/layout/activity_chat.xml
@@ -26,7 +26,7 @@
             android:paddingHorizontal="@dimen/md_theme_indent_1x"
             android:layout_below="@id/chats_app_bar"
             android:layout_above="@id/send_message"
-            app:MvxTemplateSelector="SimpleChat.UI.Pages.ChatPage.MessageTemplateSelector, SimpleChat"
+            app:MvxTemplateSelector="SimpleChat.Android.UI.Pages.ChatPage.MessageTemplateSelector, SimpleChat.Android"
             app:MvxBind="ItemsSource Messages"/>
     
     <LinearLayout
