--- a/SimpleChat.Android/Resources/layout/activity_chat.xml
+++ b/SimpleChat.Android/Resources/layout/activity_chat.xml
@@ -22,21 +22,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/md_theme_indent_2x"
-            android:layout_marginBottom="@dimen/md_theme_indent_2x"
             android:paddingHorizontal="@dimen/md_theme_indent_1x"
             android:layout_below="@id/chats_app_bar"
             android:layout_above="@id/send_message"
             app:MvxTemplateSelector="SimpleChat.Android.UI.Pages.ChatPage.MessageTemplateSelector, SimpleChat.Android"
             app:MvxBind="ItemsSource Messages"/>
-    
+
     <LinearLayout
             android:id="@+id/send_message"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginHorizontal="@dimen/md_theme_indent_1x"
             android:paddingHorizontal="@dimen/md_theme_indent_1x"
-            android:background="@drawable/send_message_block_background"
+            android:background="?attr/colorSecondaryContainer"
             android:orientation="horizontal">
 
         <EditText
@@ -50,14 +48,17 @@
                 android:textAppearance="?attr/textAppearanceBody1"
                 android:id="@+id/searchInput"
                 app:MvxBind="Text CurrentMessage; Hint MessageHint"/>
-        
+
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/send_24"
-            app:MvxBind="Visible SendButtonVisible; Click SendCommand"/>
-        
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:src="@drawable/send_24"
+                android:gravity="center"
+                android:tint="?attr/colorPrimary"
+                android:background="@android:color/transparent"
+                app:MvxBind="Visible SendButtonVisible; Click SendCommand"/>
+
     </LinearLayout>
 
-    
+
 </RelativeLayout>
