--- a/SimpleChat.Android/Resources/layout/view_chat.xml
+++ b/SimpleChat.Android/Resources/layout/view_chat.xml
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="wrap_content"
+                                                   android:layout_marginBottom="@dimen/md_theme_indent_1x">
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,5 +20,5 @@
                 android:textAppearance="?attr/textAppearanceSubtitle1"
                 app:MvxBind="Text Subtitle"/>
     </LinearLayout>
-    
+
 </com.google.android.material.card.MaterialCardView>
